[gd_scene load_steps=5 format=2]

[ext_resource path="res://dataCode/Main.cs" type="Script" id=1]
[ext_resource path="res://dataCode/HTTPRequest.gd" type="Script" id=2]
[ext_resource path="res://dataFile/musics/like-totally-rad.ogg" type="AudioStream" id=3]
[ext_resource path="res://Common/Background.tscn" type="PackedScene" id=4]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Database" type="Node" parent="."]
process_priority = 1
script = ExtResource( 2 )

[node name="WEB_GeralServerData" type="HTTPRequest" parent="Database"]
use_threads = true
timeout = 5

[node name="WEB_GeralPutData" type="HTTPRequest" parent="Database"]
use_threads = true
timeout = 5

[node name="WEB_GeralPutData1" type="HTTPRequest" parent="Database"]
use_threads = true
timeout = 5

[node name="WEB_UserData" type="HTTPRequest" parent="Database"]
use_threads = true
timeout = 5

[node name="WEB_GeralGetData" type="HTTPRequest" parent="Database"]

[node name="WEB_GeralGetData1" type="HTTPRequest" parent="Database"]

[node name="Background" parent="." instance=ExtResource( 4 )]

[node name="BackgroundSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -40.0
